# opencv-master

app/src/main/java/com/iparse/opencv/: MainActivity.java
opencv-contours/: build.gradle
opencv-contours/src/main/cpp/: CMakeLists.txt  static-libs.cpp
